# poc_extracao_de_regras_rag_v2

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py  prompts.py  rag_service.py  schemas.py
chroma_db/: chroma.sqlite3
data/golden_dataset/: golden_cases_V0_DEPRECATED.csv  golden_cases_V1_DEPRECATED.csv  golden_cases_V2_DEPRECCATED.csv  golden_cases_ragas.csv
data/keywords/: Suporte a decisão Diabetes Pathway CIA.json
evaluation/: evaluate_golden_cases.py  evaluate_golden_cases_v2.py
evaluation/results/: evaluation_results.csv  evaluation_results.xlsx  evaluation_results_with_my_notes.xlsx
markdown_vector_indexer/: __init__.py  __main__.py  indexer.py  langchain_einstein.py  pipeline.py
notebooks/: testes.ipynb
pdf_markdown_converter/: __init__.py  converter.py
scripts/: pdf_to_markdown.py  retrieving.py  vectorizer.py
