[project]
name = "poc-extracao-de-regras-rag-v2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "uvicorn[standard]>=0.47.0",
]
